# thimka

./: CMakeLists.txt  README.md
assets/objs/: sword.mtl
assets/shaders/: fragment.glsl  lightfrag.glsl  lightvert.glsl  objfrag.glsl  objvert.glsl  skyboxfrag.glsl  skyboxvert.glsl  vertex.glsl
demos/: 1.mov
include/: App.h  Game.h  Gui.h  JUScene.h  ThimkaScene.h  callbackevents.h  camera.h  camera2.h  debug.h  indexbuffer.h  mesh.h  renderer.h  scene.h  shader.h  storagebuffer.h  texture.h  timer.h  vertexarray.h  vertexbuffer.h
shaders/: fragment.glsl  vertex.glsl
src/: App.cpp  Game.cpp  Gui.cpp  JUScene.cpp  ThimkaScene.cpp  callbackevents.cpp  camera.cpp  camera2.cpp  debug.cpp  indexbuffer.cpp  main.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  storagebuffer.cpp  texture.cpp  timer.cpp  vertexarray.cpp  vertexbuffer.cpp
